[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/cabecavr.gd" type="Script" id=2]
[ext_resource path="res://assets/Imagens/btnAnteriorDOWN.png" type="Texture" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 1.2
height = 9.0

[sub_resource type="BoxShape" id=2]
margin = 0.4
extents = Vector3( 0.8, 0.2, 0.8 )

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.623928, 0 )
input_capture_on_drag = true
script = ExtResource( 1 )

[node name="Body_CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-007, -1, 0, 1, -1.62921e-007, 0, 5.81098, 0 )
shape = SubResource( 1 )

[node name="Feet_CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0394535, 0 )
shape = SubResource( 2 )

[node name="cabeca" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.239, 0 )
visible = false

[node name="Camera" type="Camera" parent="cabeca"]
transform = Transform( -1, 0, 1.50996e-007, 0, 1, 0, -1.50996e-007, 0, -1, 0, 0, 0 )
current = true
fov = 90.0
far = 300.0

[node name="Flashlight" type="SpotLight" parent="cabeca"]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-008, 0, -8.74228e-008, -1, 0, -0.307539, -0.0646362 )
visible = false
light_energy = 6.08
light_indirect_energy = 7.04
light_bake_mode = 0
shadow_bias = 0.4
spot_range = 30.0
spot_attenuation = 2.0
spot_angle = 24.9722

[node name="cabecavr" type="Spatial" parent="."]
transform = Transform( -1, 0, -1.50996e-007, 0, 1, 0, 1.50996e-007, 0, -1, 0, 11.239, 0 )
script = ExtResource( 2 )

[node name="ARVROrigin" type="ARVROrigin" parent="cabecavr"]

[node name="ARVRAnchor" type="ARVRAnchor" parent="cabecavr/ARVROrigin"]
transform = Transform( -1, 0, 8.74228e-008, 0, 1, 0, -8.74228e-008, 0, -1, 0, 0, 0 )
anchor_id = 1

[node name="ARVRCamera" type="ARVRCamera" parent="cabecavr/ARVROrigin"]

[node name="RayCast" type="RayCast" parent="cabecavr"]
enabled = true
cast_to = Vector3( 0, 0, -4.09 )
collide_with_areas = true
collide_with_bodies = false

[node name="Control" type="Control" parent="."]
margin_left = 180.0
margin_top = 501.0
margin_right = 220.0
margin_bottom = 541.0

[node name="Esquerda" type="TouchScreenButton" parent="Control"]
position = Vector2( -150, 0 )
normal = ExtResource( 3 )

[node name="Cima" type="TouchScreenButton" parent="Control"]
position = Vector2( 56.1855, -90 )
rotation = 1.5708
normal = ExtResource( 3 )

[node name="Direita" type="TouchScreenButton" parent="Control"]
position = Vector2( 148, 113.728 )
rotation = 3.14159
normal = ExtResource( 3 )

[node name="Baixo" type="TouchScreenButton" parent="Control"]
position = Vector2( -57, 199 )
rotation = 4.71239
normal = ExtResource( 3 )

[connection signal="pressed" from="Control/Esquerda" to="." method="_on_Esquerda_pressed"]
[connection signal="released" from="Control/Esquerda" to="." method="_on_Esquerda_released"]
[connection signal="pressed" from="Control/Cima" to="." method="_on_Cima_pressed"]
[connection signal="released" from="Control/Cima" to="." method="_on_Cima_released"]
[connection signal="pressed" from="Control/Direita" to="." method="_on_Direita_pressed"]
[connection signal="released" from="Control/Direita" to="." method="_on_Direita_released"]
[connection signal="pressed" from="Control/Baixo" to="." method="_on_Baixo_pressed"]
[connection signal="released" from="Control/Baixo" to="." method="_on_Baixo_released"]
